--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 50px;
   pointer-events: none;
 }
 
@@ -15,17 +15,46 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 10px;
 }
 
 .App-link {
   color: #61dafb;
+}
+.product-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tag-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.tag {
+  min-width: 50px;
+  font-size: 12px;
+  background: #ffffff;
+  color: black;
+  opacity: 0.6;
+  border-radius: 10px;
+  margin: 10px 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.tag.active {
+  opacity: 1;
+  border: 3px solid #ccc;
+  font-weight: bold;
 }
 
 @keyframes App-logo-spin {
